--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -16,5 +16,8 @@
     </ul>
     <br>
     <a href="/listings/<%= listing._id %>/edit">Edit this listing</a>
+    <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+        <button>Delete This Listing</button>
+    </form>
 </body>
 </html>
