--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,35 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
-<body>
-     <h3>Edit your Listing</h3>
-    <form method="post" action="/listings/<%= listing._id %>?_method=PUT">
-      <input name="listing[title]" value="<%= listing.title %>" type="text" />
-      <br /><br />
-      <textarea
-        name="listing[description]"><%= listing.description %>"</textarea>
-      <br /><br />
-      <input
-        name="listing[image]"
-        value="<%= listing.image.url %>"
-        type="text"
-      />
-      <br /><br />
-      <input name="listing[price]" value="<%= listing.price %>" type="number" />
-      <br /><br />
-      <input name="listing[country]" value="<%= listing.country %>" type="text" />
-      <br /><br />
+<% layout("/layouts/boilerplate")%>
+<br>
+<div class="row">
+<div class="col-8 offset-2">
+  <h3>Edit your Listing</h3>
+  <form method="post" action="/listings/<%= listing._id %>?_method=PUT">
+    <div>
+      <lable for="title" class="form-label">Title</lable>
+      <input name="listing[title]" value="<%= listing.title %>" type="text"  class="form-control" />
+    </div>
+    <br />
+    <div>
+      <lable for="description" class="form-label">Description</lable>
+      <textarea name="listing[description]"  class="form-control"><%= listing.description %>"</textarea>
+    </div>
+    <br />
+    <div>
+      <lable for="image link" class="form-label">Image URL</lable>
+      <input name="listing[image]" value="<%= listing.image.url %>" type="text"  class="form-control" />
+    </div>
+    <br />
+    <div class="row">
+      <div class="col-md-4">
+        <lable for="price" class="form-label">Price</lable>
+        <input name="listing[price]" value="<%= listing.price %>" type="number"  class="form-control"/>
+      </div>
+      <br />
+      <div class="col-md-8">
+        <lable for="country" class="form-label">Country</lable>
+        <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control" />
+      </div>
+    </div>
+    <br />
+    <div>
+      <lable for="location" class="form-label">Location</lable>
       <input
         name="listing[location]"
         value="<%= listing.location %>"
         type="text"
+         class="form-control"
       />
-      <br /><br />
-      <button>Edit</button>
-    </form>
-</body>
-</html>
+    </div>
+    <br />
+    <button class="edit-btn">Edit</button>
+  </form>
+   </div>
+    </div>
