--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-solid fa-torii-gate"></i>TokTour</a>
+    <a class="navbar-brand" href="/"><i class="fa-solid fa-torii-gate"></i></a>
     <button
       class="navbar-toggler"
       type="button"
