--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,47 +1,79 @@
 <% layout("/layouts/boilerplate")%>
-<br>
+<br />
 <div class="row">
-<div class="col-8 offset-2">
-  <h3>Edit your Listing</h3>
-  <form method="post" action="/listings/<%= listing._id %>?_method=PUT">
-    <div>
-      <lable for="title" class="form-label">Title</lable>
-      <input name="listing[title]" value="<%= listing.title %>" type="text"  class="form-control" />
-    </div>
-    <br />
-    <div>
-      <lable for="description" class="form-label">Description</lable>
-      <textarea name="listing[description]"  class="form-control"><%= listing.description %>"</textarea>
-    </div>
-    <br />
-    <div>
-      <lable for="image link" class="form-label">Image URL</lable>
-      <input name="listing[image]" value="<%= listing.image.url %>" type="text"  class="form-control" />
-    </div>
-    <br />
-    <div class="row">
-      <div class="col-md-4">
-        <lable for="price" class="form-label">Price</lable>
-        <input name="listing[price]" value="<%= listing.price %>" type="number"  class="form-control"/>
+  <div class="col-8 offset-2">
+    <h3>Edit your Listing</h3>
+    <form method="post" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+      <div>
+        <lable for="title" class="form-label">Title</lable>
+        <input
+          name="listing[title]"
+          value="<%= listing.title %>"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="valid-feedback">Title Looks Good</div>
       </div>
       <br />
-      <div class="col-md-8">
-        <lable for="country" class="form-label">Country</lable>
-        <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control" />
+      <div>
+        <lable for="description" class="form-label">Description</lable>
+        <textarea name="listing[description]" class="form-control" required>
+<%= listing.description %>"</textarea
+        >
+        <div class="invalid-feedback">Plese Enter A Short Description</div>
       </div>
-    </div>
-    <br />
-    <div>
-      <lable for="location" class="form-label">Location</lable>
-      <input
-        name="listing[location]"
-        value="<%= listing.location %>"
-        type="text"
-         class="form-control"
-      />
-    </div>
-    <br />
-    <button class="edit-btn">Edit</button>
-  </form>
-   </div>
-    </div>
+      <br />
+      <div>
+        <lable for="image link" class="form-label">Image URL</lable>
+        <input
+          name="listing[image][url]"
+          value="<%= listing.image.url %>"
+          type="text"
+          class="form-control"
+          required
+        />
+      </div>
+      <br />
+      <div class="row">
+        <div class="col-md-4">
+          <lable for="price" class="form-label">Price</lable>
+          <input
+            name="listing[price]"
+            value="<%= listing.price %>"
+            type="number"
+            class="form-control"
+            required
+          />
+          <div class="invalid-feedback">Price Should Be Valid</div>
+        </div>
+        <br />
+        <div class="col-md-8">
+          <lable for="country" class="form-label">Country</lable>
+          <input
+            name="listing[country]"
+            value="<%= listing.country %>"
+            type="text"
+            class="form-control"
+            required
+          />
+          <div class="invalid-feedback">Country Name Should Be Valid</div>
+        </div>
+      </div>
+      <br />
+      <div>
+        <lable for="location" class="form-label">Location</lable>
+        <input
+          name="listing[location]"
+          value="<%= listing.location %>"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="invalid-feedback">Location Should Be Valid</div>
+      </div>
+      <br />
+      <button class="btn btn-danger">Edit</button>
+    </form>
+  </div>
+</div>
