--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,15 +1,36 @@
 <% layout("/layouts/boilerplate")%>
+
+<div class="row">
+  <div class="col-8 offset-3">
     <h3>Listing Details</h3>
-    <ul>
-        <li><%= listing.title %></li>
-        <li><%= listing.description %></li>
-        <li>&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country %></li>
-    </ul>
-    <br>
-    <a href="/listings/<%= listing._id %>/edit">Edit this listing</a>
-    <br> <br>
+  </div>
+  <div class="card col-6 offset-3 show-cards">
+    <img
+      src="<%=listing.image.url%>"
+      class="card-img-top show-img"
+      alt="Listing Image"
+    />
+    <div class="card-body">
+      <p class="card-text"><b><%=listing.title %></b></p>
+      <li><%= listing.description %></li>
+      <li>
+        &#8377; <%= (listing.price !== null && listing.price !== undefined) ?
+        listing.price.toLocaleString("en-IN") : "N/A" %>
+      </li>
+      <li><%= listing.location %></li>
+      <li><%= listing.country %></li>
+    </div>
+  </div>
+  <br />
+
+  <div class="btns">
+    <a
+      href="/listings/<%= listing._id %>/edit"
+      class="btn btn-danger col-1 offset-3"
+      >Edit</a
+    >
     <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-        <button class="delete-btn">Delete This Listing</button>
+      <button class="btn btn-dark offset-5">Delete</button>
     </form>
+  </div>
+</div>
